fix spacing of the download buttons for the homepage

--- a/sass/docs.scss
+++ b/sass/docs.scss
@@ -91,8 +91,8 @@ a {
 
 .btn-components,
 .btn-download {
-  margin-right: 2rem;
-  margin-left: 2rem;
+  margin-right: $mobile-spacing;
+  margin-left: $mobile-spacing;
   padding: 12px 30px;
   display: block;
 }
